tests/baselines/reference/types.asyncGenerators.esnext.1.errors.txt
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts(17,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts(20,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts(32,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts(35,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts(47,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts(50,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts(62,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts(65,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts(77,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts(80,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts(92,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts(95,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts(107,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts(110,12): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.


==== tests/cases/conformance/types/asyncGenerators/types.asyncGenerators.esnext.1.ts (14 errors) ====
    async function * inferReturnType1() {
    }
    async function * inferReturnType2() {
        yield;
    }
    async function * inferReturnType3() {
        yield 1;
    }
    async function * inferReturnType4() {
        yield Promise.resolve(1);
    }
    async function * inferReturnType5() {
        yield 1;
        yield Promise.resolve(2);
    }
    async function * inferReturnType6() {
        yield* [1, 2];
               ~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
    async function * inferReturnType7() {
        yield* [Promise.resolve(1)];
               ~~~~~~~~~~~~~~~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
    async function * inferReturnType8() {
        yield* (async function * () { yield 1; })();
    }
    const assignability1: () => AsyncIterableIterator<number> = async function * () {
        yield 1;
    };
    const assignability2: () => AsyncIterableIterator<number> = async function * () {
        yield Promise.resolve(1);
    };
    const assignability3: () => AsyncIterableIterator<number> = async function * () {
        yield* [1, 2];
               ~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    };
    const assignability4: () => AsyncIterableIterator<number> = async function * () {
        yield* [Promise.resolve(1)];
               ~~~~~~~~~~~~~~~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    };
    const assignability5: () => AsyncIterableIterator<number> = async function * () {
        yield* (async function * () { yield 1; })();
    };
    const assignability6: () => AsyncIterable<number> = async function * () {
        yield 1;
    };
    const assignability7: () => AsyncIterable<number> = async function * () {
        yield Promise.resolve(1);
    };
    const assignability8: () => AsyncIterable<number> = async function * () {
        yield* [1, 2];
               ~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    };
    const assignability9: () => AsyncIterable<number> = async function * () {
        yield* [Promise.resolve(1)];
               ~~~~~~~~~~~~~~~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    };
    const assignability10: () => AsyncIterable<number> = async function * () {
        yield* (async function * () { yield 1; })();
    };
    const assignability11: () => AsyncIterator<number> = async function * () {
        yield 1;
    };
    const assignability12: () => AsyncIterator<number> = async function * () {
        yield Promise.resolve(1);
    };
    const assignability13: () => AsyncIterator<number> = async function * () {
        yield* [1, 2];
               ~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    };
    const assignability14: () => AsyncIterator<number> = async function * () {
        yield* [Promise.resolve(1)];
               ~~~~~~~~~~~~~~~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    };
    const assignability15: () => AsyncIterator<number> = async function * () {
        yield* (async function * () { yield 1; })();
    };
    async function * explicitReturnType1(): AsyncIterableIterator<number> {
        yield 1;
    }
    async function * explicitReturnType2(): AsyncIterableIterator<number> {
        yield Promise.resolve(1);
    }
    async function * explicitReturnType3(): AsyncIterableIterator<number> {
        yield* [1, 2];
               ~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
    async function * explicitReturnType4(): AsyncIterableIterator<number> {
        yield* [Promise.resolve(1)];
               ~~~~~~~~~~~~~~~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
    async function * explicitReturnType5(): AsyncIterableIterator<number> {
        yield* (async function * () { yield 1; })();
    }
    async function * explicitReturnType6(): AsyncIterable<number> {
        yield 1;
    }
    async function * explicitReturnType7(): AsyncIterable<number> {
        yield Promise.resolve(1);
    }
    async function * explicitReturnType8(): AsyncIterable<number> {
        yield* [1, 2];
               ~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
    async function * explicitReturnType9(): AsyncIterable<number> {
        yield* [Promise.resolve(1)];
               ~~~~~~~~~~~~~~~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
    async function * explicitReturnType10(): AsyncIterable<number> {
        yield* (async function * () { yield 1; })();
    }
    async function * explicitReturnType11(): AsyncIterator<number> {
        yield 1;
    }
    async function * explicitReturnType12(): AsyncIterator<number> {
        yield Promise.resolve(1);
    }
    async function * explicitReturnType13(): AsyncIterator<number> {
        yield* [1, 2];
               ~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
    async function * explicitReturnType14(): AsyncIterator<number> {
        yield* [Promise.resolve(1)];
               ~~~~~~~~~~~~~~~~~~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
    async function * explicitReturnType15(): AsyncIterator<number> {
        yield* (async function * () { yield 1; })();
    }
    async function * explicitReturnType16(): {} {
        yield 1;
    }
    async function * awaitedType1() {
        const x = await 1;
    }
    async function * awaitedType2() {
        const x = await Promise.resolve(1);
    }